<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/dark_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10dp"
        android:layout_marginRight="@dimen/dp_10dp"
        android:text="@string/login_help"
        android:textColor="@color/black_gray"
        android:textSize="@dimen/text_size_19"
        android:visibility="gone" />


    <EditText
        android:id="@+id/edt_login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10dp"
        android:layout_marginRight="@dimen/dp_10dp"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/transparent"
        android:digits="0123456789"
        android:drawablePadding="@dimen/dp_10dp"
        android:hint="@string/login_username_hint"
        android:inputType="phone"
        android:maxLength="11"
        android:maxLines="1"
        android:padding="@dimen/dp_5dp"
        android:textColor="@color/black_gray"
        android:textSize="@dimen/text_size_15" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/dp_10dp"
        android:layout_marginRight="@dimen/dp_10dp"
        android:layout_marginTop="@dimen/dp_4dp"
        android:background="@color/dark_gray"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10dp"
        android:layout_marginRight="@dimen/dp_10dp"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/edt_login_image_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawablePadding="@dimen/dp_10dp"
            android:hint="@string/login_image_code_hint"
            android:inputType="phone"
            android:maxLength="6"
            android:maxLines="1"
            android:padding="@dimen/dp_5dp"
            android:textColor="@color/black_gray"
            android:textSize="@dimen/text_size_15" />

        <RelativeLayout
            android:id="@+id/rl_login_image_code_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_login_image_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/dp_10dp"
        android:layout_marginRight="@dimen/dp_10dp"
        android:layout_marginTop="@dimen/dp_4dp"
        android:background="@color/dark_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10dp"
        android:layout_marginRight="@dimen/dp_10dp"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_login_sms_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawablePadding="@dimen/dp_10dp"
            android:hint="@string/login_sms_code_hint"
            android:inputType="phone"
            android:maxLength="6"
            android:maxLines="1"
            android:padding="@dimen/dp_5dp"
            android:textColor="@color/black_gray"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/tv_login_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_main_color_corner"
            android:paddingBottom="@dimen/dp_5dp"
            android:paddingLeft="@dimen/dp_10dp"
            android:paddingRight="@dimen/dp_10dp"
            android:paddingTop="@dimen/dp_5dp"
            android:text="@string/login_get_sms_code"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/dp_10dp"
        android:layout_marginRight="@dimen/dp_10dp"
        android:layout_marginTop="@dimen/dp_4dp"
        android:background="@color/dark_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_10dp"
        android:layout_marginRight="@dimen/dp_10dp"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_login_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/chb_address_default"
            android:drawablePadding="@dimen/dp_5dp"
            android:text="同意"
            android:textColor="@color/black_gray"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/tv_login_platform_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="《用户使用协议》"
            android:textColor="@color/black_gray"
            android:textSize="@dimen/text_size_12" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10dp"
        android:layout_marginRight="@dimen/dp_10dp"
        android:background="@drawable/bg_button_main_color_corner"
        android:text="登录"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_19" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:padding="@dimen/dp_10dp"
        android:text="未注册过的用户将直接为您创建新账户"
        android:textColor="@color/black_gray"
        android:textSize="@dimen/text_size_12" />


</LinearLayout>